# ariatui

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release-linux.yml
extensions/firefox/: README.md  background.js  chooser.css  chooser.html  chooser.js  manifest.json  options.css  options.html  options.js
scripts/: package_firefox_extension.py  package_firefox_extension.sh
src/: binary_info.rs  bootstrap.rs  cli.rs  config.rs  download_uri.rs  eta.rs  list_view.rs  main.rs  paths.rs  routing.rs  schedule.rs  speed.rs  startup.rs  state.rs  units.rs  webhook.rs
src/daemon/: child.rs  marker.rs  mod.rs  reconcile.rs  server.rs  service.rs  snapshot.rs
src/rpc/: client.rs  types.rs
src/tui/: app.rs  draw.rs  event.rs  focus.rs  forms.rs  input.rs  mod.rs  widgets.rs
src/web/: mod.rs  server.rs
