[package]
name = "ariatui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.28"
directories = "6.0"
futures = "0.3"
libc = "0.2"
rand = "0.9"
ratatui = "0.29"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tui-textarea = "0.7"
which = "8.0"
